<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/main_menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/search"
        />

    <item
        android:id="@+id/main_menu_map"
        app:showAsAction="ifRoom"
        android:title="@string/map"
        android:icon="@drawable/ic_map_white_24dp"
        />

    <item
        android:id="@+id/main_menu_add_property"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/add_property"
        />

    <item
        android:id="@+id/main_menu_add_house_seller"
        app:showAsAction="never"
        android:title="@string/add_house_seller"
        />

</menu>