<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SearchProperty.SearchPropertyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_property_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Search property" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_property_activity_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_property_activity_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />

            <Switch
                android:id="@+id/search_property_activity_property_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/property_is_sold"
                android:switchPadding = "20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/search_property_activity_create_date_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/search_property_activity_property_sold"
                app:layout_constraintTop_toBottomOf="@+id/search_property_activity_property_sold"
                >
                <TextView
                    android:id="@+id/search_property_activity_create_date_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/search_property_activity_create_date_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_down_24px"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:text="@string/select_date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_property_activity_sell_date_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/search_property_activity_create_date_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/search_property_activity_create_date_container"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <TextView
                    android:id="@+id/search_property_activity_sell_date_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/search_property_activity_sell_date_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_down_24px"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:text="@string/select_date"
                    />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_property_activity_min_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/min_price"
                app:endIconDrawable="@drawable/ic_euro_24px"
                app:endIconMode="custom"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/search_property_activity_create_date_container"
                app:layout_constraintTop_toBottomOf="@+id/search_property_activity_create_date_container"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_property_activity_max_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/max_price"
                app:endIconDrawable="@drawable/ic_euro_24px"
                app:endIconMode="custom"
                app:layout_constraintBottom_toBottomOf="@+id/search_property_activity_min_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/search_property_activity_min_price"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_property_activity_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                app:endIconDrawable="@drawable/ic_home_marker_40"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_property_activity_min_price"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/search_property_checkbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_property_activity_location"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/search_property_activity_nearby_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/search_nearby"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_down_24px"
                    android:textColor="@android:color/black"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/search_property_activity_nearby_content_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/search_property_activity_school_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/school"
                        android:theme="@style/Checkbox"
                        app:layout_constraintEnd_toStartOf="@+id/guideline4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/search_property_activity_garden_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/garden"
                        android:theme="@style/Checkbox"
                        app:layout_constraintStart_toStartOf="@+id/search_property_activity_school_checkbox"
                        app:layout_constraintTop_toBottomOf="@+id/search_property_activity_school_checkbox" />


                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/search_property_activity_business_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:theme="@style/Checkbox"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline4"
                        app:layout_constraintTop_toTopOf="@+id/search_property_activity_school_checkbox" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/search_property_activity_transport_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transports"
                        android:theme="@style/Checkbox"
                        app:layout_constraintStart_toStartOf="@+id/search_property_activity_business_checkbox"
                        app:layout_constraintTop_toTopOf="@+id/search_property_activity_garden_checkbox" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_property_activity_min_media"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/min_media"
                app:endIconDrawable="@drawable/ic_photo_black_24dp"
                app:endIconMode="custom"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_property_checkbox_layout"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/blank_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text=""
                android:layout_marginTop="70dp"
                app:layout_constraintTop_toBottomOf="@+id/search_property_activity_min_media" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/search_property_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        app:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        app:icon="@drawable/ic_search_white_24dp"
        app:iconTint="@android:color/white"
        app:rippleColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
