<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddProperties.AddPropertyActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_property_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/add_property_activity_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_property_activity_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/add_property_activity_textView_type"
                style="spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/type"
                app:layout_constraintBottom_toBottomOf="@+id/add_property_activity_price_filledTextField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/add_property_activity_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/add_property_activity_textView_type"
                app:layout_constraintStart_toEndOf="@+id/add_property_activity_textView_type"
                app:layout_constraintTop_toTopOf="@+id/add_property_activity_textView_type"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_activity_price_filledTextField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="Price"
                app:endIconContentDescription="OSEF"
                app:endIconDrawable="@drawable/ic_attach_money_black_24dp"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_property_activity_spinner"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_activity_surface_filledTextField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/surface"
                app:layout_constraintStart_toStartOf="@+id/add_property_activity_textView_type"
                app:layout_constraintTop_toBottomOf="@+id/add_property_activity_price_filledTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_activity_room_number_filledTextField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/room_number"
                app:layout_constraintStart_toStartOf="@+id/add_property_activity_price_filledTextField"
                app:layout_constraintTop_toTopOf="@+id/add_property_activity_surface_filledTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_activity_description_filledTextField"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:hint="@string/description"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_property_activity_surface_filledTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/add_property_activity_add_photo_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                app:icon="@drawable/ic_add_white_24dp"
                android:layout_width="217dp"
                android:layout_height="46dp"
                android:text="@string/add_photo"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_property_activity_house_seller_filledTextField" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_activity_address_filledTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@+id/add_property_activity_description_filledTextField"
                app:layout_constraintStart_toStartOf="@+id/add_property_activity_description_filledTextField"
                app:layout_constraintTop_toBottomOf="@+id/add_property_activity_description_filledTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_activity_house_seller_filledTextField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/house_seller"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_property_activity_address_filledTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>